<resources>
    <string name="app_name">T-Dex</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">OR</string>
    <string name="logo">Logo</string>
    <string name="t_dex">T-Dex</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="most_famous">Most Famous Places</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">948195832271-j3m83kfekbj4iesvfhr9qtskr8688egp.apps.googleusercontent.com</string>
    <string name="secondary_web_client_id" translatable="false">748141285379-fr4acct3ueavuqr6n4rd7in0ep64nmju.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="greetings">Greetings!</string>
    <string name="search_destination">Search Destination</string>
    <string name="popular">Popular</string>
    <string name="brihadeeshwarar_temple">Brihadeeshwarar Temple</string>
    <string name="tanjore_tamilnadu">Tanjore, TamilNadu</string>
    <string name="meenakshi_temple">Meenakshi Temple</string>
    <string name="madurai_tamilnadu">Madurai, TamilNadu</string>
    <string name="mahabalipuram">Mahabalipuram</string>
    <string name="mamallapuram_tamilnadu">Mamallapuram, TamilNadu </string>
    <string name="vellore_fort">Vellore Fort</string>
    <string name="vellore_tamilnadu">Vellore, TamilNadu</string>
    <string name="search_by_category">Search by Category</string>
    <string name="all">All</string>
    <string name="_5_km">5 Km</string>
    <string name="_10_km">10 Km</string>
    <string name="_15_km">15 Km</string>
    <string name="_20_km">20 Km</string>
    <string name="home">Home</string>
    <string name="visited">Visited</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="isha_yoga_centre">Isha Yoga Centre</string>
    <string name="coimbatore_tamilnadu">Coimbatore, Tamilnadu</string>
    <string name="maruthamalai_murugan_temple">Maruthamalai Temple</string>
    <string name="velliangiri_hills">Velliangiri Hills</string>
    <string name="gass_forest_museum">Gass Forest Museum</string>
    <string name="r_s_puram_coimbatore">R.S. Puram, Coimbatore</string>
    <string name="kaviyaruvi_waterfalls">Kaviyaruvi Waterfalls</string>
    <string name="aalliyar_reserve_forest_coimbatore">Aalliyar Reserve Forest, Coimbatore</string>
    <string name="gedee_museum">Gedee Museum</string>
    <string name="race_course_coimbatore">Race Course, Coimbatore</string>
    <string name="sathyamangalam_wildlife_sanctuary">Sathyamangalam Wildlife \nSanctuary</string>
    <string name="sathyamangalam_tamilnadu">Near Coimbatore</string>
    <string name="government_museum">Government Museum</string>
    <string name="gopalapuram_coimbatore">Gopalapuram, Coimbatore</string>
    <string name="valparai">Valparai</string>
    <string name="valparai_coimbatore">Valparai, Coimbatore</string>
    <string name="perur_pateeswarar_temple">Perur Pateeswarar Temple</string>
    <string name="perur_coimbatore">Perur, Coimbatore.</string>
    <string name="send_otp">Send OTP</string>
    <string name="mark_place_as_visited">Mark Place as Visited</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="select_visit_date">Select Visit Date</string>
    <string name="visited_places">Visited Places</string>
    <string name="clear_history">Clear History</string>
    <string name="no_places_found_humorous">Sorry, Alien… There are no places in the selected range</string>
    <string name="search_by_photo">Search by Photo</string>
    <string name="open_chatbot">Open Chatbot</string>
    <string name="to_visit">To Visit</string>
    <string name="type_your_message">Type your message…</string>
    <string name="send_message">Send Message</string>
    <string name="voice_input">Voice Input</string>
    <string name="enter_name">Enter Name</string>
    <string name="save">Save</string>
    <string name="enter_date_of_birth_yyyy_mm_dd">Enter Date of Birth (YYYY-MM-DD)</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="welcome_to_nt_dex">Welcome to \nT-Dex</string>
    <string name="prasanth_m">Prasanth M</string>
    <string name="andrew_domainname_com">andrew@domainname.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigate">Navigate</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="support">Support</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="log_out">Log Out</string>
    <string name="select_language">Select Language</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_an_user_sign_in">Already an User? Sign-in</string>
    <string name="brahadeeshwarar_temple">Brahadeeshwarar Temple</string>
    <string name="tanjore_tamil_nadu">Tanjore, Tamil Nadu</string>
    <string name="_19_km">19 Km</string>
    <string name="add">Add</string>
    <string name="voice_interaction">Voice Interaction</string>
    <string name="direction">Direction</string>
    <string name="nestled_on_a_serene">Nestled on a serene hill in Coimbatore, the Maruthamalai Murugan Temple is a divine 12th-century marvel dedicated to Lord Murugan. Ascend 837 steps to witness the stunning 180-meter tall gopuram adorned with intricate carvings. This pilgrimage site is famed for its self-manifested idol, medicinal springs, and the vibrant annual Thaipoosam festival. The temple’s breathtaking views and serene atmosphere make it an unmissable spiritual haven for travelers.</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="closing_hours">Closing Hours:</string>
    <string name="operating_days">Operating Days:</string>
    <string name="close">Close</string>
    <string name="plus">+</string>
    <string name="chennai">Chennai</string>
    <string name="coimbatore">Coimbatore</string>
    <string name="madurai">Madurai</string>
    <string name="mark_as_visited">Mark as Visited</string>
    <string name="delete">Delete</string>
    <string name="place_removed_from_visit_locations">%s removed from Visit Locations</string>
    <string name="maruthamalai_temple_name">Maruthamalai Temple</string>
    <string name="maruthamalai_temple_location">Maruthamalai, Tamil Nadu</string>
    <string name="maruthamalai_temple_distance">20 Km</string>
    <string name="maruthamalai_temple_description">Nestled on a serene hill in Coimbatore, the Maruthamalai Murugan Temple is a divine 12th-century marvel dedicated to Lord Murugan. Ascend 837 steps to witness the stunning 180-meter tall gopuram adorned with intricate carvings. This pilgrimage site is famed for its self-manifested idol, medicinal springs, and the vibrant annual Thaipoosam festival. The temple’s breathtaking views and serene atmosphere make it an unmissable spiritual haven for travelers.</string>
    <string name="maruthamalai_temple_opening_hours">6:00 AM</string>
    <string name="maruthamalai_temple_closing_hours">9:00 PM</string>
    <string name="maruthamalai_temple_operating_days">All days</string>
    <string name="isha_yoga_centre_name">Isha Yoga Centre</string>
    <string name="isha_yoga_centre_location">Coimbatore, Tamil Nadu</string>
    <string name="isha_yoga_centre_distance">35 Km</string>
    <string name="isha_yoga_centre_description">The Isha Yoga Center situated at the foothills of Velliangiri, on the outskirts of Coimbatore, is the headquarters for Isha Foundation. Isha is a sacred space for self-transformation, where you can come dedicate time towards your inner growth. The center offers all four major paths of yoga – kriya (energy), gnana (knowledge), karma (action), and bhakti (devotion), drawing people from all over the world.\n\nThe Center is dedicated to fostering inner transformation and creating an established state of wellbeing in individuals. The large residential facility houses an active international community of brahmacharis, full-time volunteers and visitors. Isha Yoga Center provides a supportive environment for you to shift to healthier lifestyles, seek a higher level of self-fulfillment and realize your full potential.</string>
    <string name="isha_yoga_centre_opening_hours">6:00 AM</string>
    <string name="isha_yoga_centre_closing_hours">8:00 PM</string>
    <string name="isha_yoga_centre_operating_days">Monday to Sunday</string>
    <string name="velliangiri_hills_name">Velliangiri Hills</string>
    <string name="velliangiri_hills_location">Coimbatore, Tamil Nadu</string>
    <string name="velliangiri_hills_distance">40 Km</string>
    <string name="velliangiri_hills_description">The Velliangiri Mountains, a part of the Nilgiri Biosphere Reserve, are situated in the Western Ghats of Coimbatore district, Tamil Nadu. Known as the \"Sapthagiri, 7 Hills - Seven Mountains,\" these mountains are revered on par with Mount Kailash, the legendary abode of Shiva, considered one of the most spiritually powerful places on the planet. At the top of the Velliangiri Mountains, Shiva is worshipped as Swayambhu, one who is self-created, and in this form, he graces the devotees.</string>
    <string name="velliangiri_hills_opening_hours">5:00 AM</string>
    <string name="velliangiri_hills_closing_hours">6:00 PM</string>
    <string name="velliangiri_hills_operating_days">All days</string>
    <string name="gass_forest_museum_name">Gass Forest Museum</string>
    <string name="gass_forest_museum_location">R.S.Puram, Coimbatore</string>
    <string name="gass_forest_museum_distance">20 Km</string>
    <string name="gass_forest_museum_description">The Gass Forest Museum, located in Coimbatore, Tamil Nadu, is a captivating natural history museum that was established in 1902. It is named in honor of Horace Archibald Gass, a prominent figure in forestry during that era. The museum serves as a window into the rich biodiversity of the Western Ghats, showcasing an impressive and diverse collection of preserved specimens.\n\nVisitors can explore a variety of exhibits that include plants, animals, and insects native to the region. The museum also offers insightful displays on forestry practices and conservation efforts, highlighting the importance of preserving our natural heritage. For those with a passion for nature, the Gass Forest Museum provides an enriching experience that combines education with admiration for the environment.\n\nWhether you are a nature enthusiast, a student, or simply curious about the natural world, the Gass Forest Museum is a must-visit destination.</string>
    <string name="gass_forest_museum_opening_hours">9:00 AM</string>
    <string name="gass_forest_museum_closing_hours">5:00 PM</string>
    <string name="gass_forest_museum_operating_days">Tuesday to Sunday</string>
    <string name="kaviyaruvi_waterfalls_name">Kaviyaruvi Waterfalls</string>
    <string name="kaviyaruvi_waterfalls_location">Aalliyar Reserve Forest, Coimbatore</string>
    <string name="kaviyaruvi_waterfalls_distance">20 Km</string>
    <string name="about_us">About Us</string>
    <string name="ai_chatbot">AI Chatbot</string>
</resources>